<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="?attr/paper_color">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_drawer_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/windowBackground"
        android:paddingStart="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <FrameLayout
            android:id="@+id/main_drawer_account_avatar_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/main_drawer_account_wiki_globe"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/wiki_globe_white_circle" />

            <ImageView
                android:id="@+id/main_drawer_account_avatar"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/user_avatar" />

        </FrameLayout>

        <TextView
            android:id="@+id/main_drawer_account_name"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/material_theme_secondary_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/main_drawer_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_drawer_account_avatar_container"
            tools:ignore="MissingConstraints"
            tools:text="Sample account name" />

        <TextView
            android:id="@+id/main_drawer_login_button"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/main_drawer_login"
            app:layout_constraintTop_toBottomOf="@+id/main_drawer_account_name"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/main_drawer_settings_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_settings_black_24dp"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/settings_item_preferences" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_drawer_notifications_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_notifications_black_24dp"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/notifications_activity_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_drawer_configure_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_mode_edit_white_24dp"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/feed_configure_activity_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/material_theme_border_color" />

    <Button
        android:id="@+id/smart_camera"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_potd_photo_camera"
        android:fontFamily="sans-serif"
        android:text="@string/smart_camera_tool_bar_button"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <!--
    Icon ic_qr_code downloaded from : https://www.flaticon.com/authors/pixelmeetup
    -->
    <Button
        android:id="@+id/button_qr_reader"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_qr_code"
        android:fontFamily="sans-serif"
        android:text="@string/qr_scanner_main_button"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/group_chat"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_globe"
        android:fontFamily="sans-serif"
        android:text="@string/group_chat_button_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/notes"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_mode_edit_white_24dp"
        android:fontFamily="sans-serif"
        android:text="@string/note_button_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp" />


    <Button
        android:id="@+id/button_nearby"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_my_location_24dp"
        android:fontFamily="sans-serif"
        android:text="@string/nearby_button_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/direct_message"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_talk_bubbles"
        android:fontFamily="sans-serif"
        android:text="@string/group_direct_chat_button_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/material_theme_border_color" />
    <LinearLayout
        android:id="@+id/main_drawer_donate_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_wikipedia"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/nav_item_donate" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_open_in_new_black_24px"
            app:tint="?attr/material_theme_secondary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_drawer_about_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_info_outline_black_24dp"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/about_activity_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_drawer_help_container"
        style="@style/SideDrawerMenuItem">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_help_black_24dp"
            app:tint="?attr/material_theme_secondary_color" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/main_drawer_help" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_open_in_new_black_24px"
            app:tint="?attr/material_theme_secondary_color" />
    </LinearLayout>


    <Button
        android:id="@+id/wiki_plusplus"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
        android:fontFamily="sans-serif"
        android:text="@string/t_t_login_to_wiki"
        android:textAlignment="viewStart"
        android:textColor="@color/base0" />

    <Button
        android:id="@+id/notification_settings"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_notifications_black_24dp"
        android:fontFamily="sans-serif"
        android:text="@string/t_t_notification_settings"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

</LinearLayout>
